2001-02-22  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_conf_replace_image): Now we can delete image tags too.

2001-02-22  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_quote): Put old code back in, since Chema's
	  didn't work.

2001-02-22  Chema Celorio  <chema@celorio.com>

	* boot-conf.in (xml_print_globals): fix s/quote/xst_xml_quote
	so that Crimz can stop crying like a baby

2001-02-21  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in (xst_network_interfaces_set, xst_network_rh62_interface_delete,
	  xst_network_remove_pap_entry): remove interfaces that are not present, and remove
	  pap entry if the interface used one, for security.
	* network.pl.in (xst_network_remove_pap_entry): used when a ppp interface is removed,
	  for security.
	  (xst_network_rh62_interface_delete): entry removal in rh62ish machines.
	  DNS1 and DNS2 support in tables.
	
2001-02-21  Chema Celorio  <chema@celorio.com>

	* users-conf.in (xml_print): quote the group too.

2001-02-21  Chema Celorio  <chema@celorio.com>
	
	* users-conf.in : replace the plaint_to_entities & entities
	to plain with xst_xml_quote & xst_xml_unquote
	(xml_print): quote the user data before sending it
	to the front end.

	* boot-conf.in (quote): remove use xst_xml_quote
	(unquote): remove use xst_xml_unquote

	* xml.pl (xst_xml_entities_to_plain): remove, use xst_xml_unquote
	(xst_xml_plain_to_entities): remove use xst_xml_quote instead

2001-02-21  Chema Celorio  <chema@celorio.com>

	* report.pl.in (xst_report): return, don't report status. This was
	causing a bug (which took me 3 hrs. to find) in the backends.

2001-02-21  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_set_global_kw): New fn to add or modify global keywords.
	(xst_boot_set_global): New fn to add or modify globals (repsects all spaces).
	(xst_boot_del_global): Nef fn to delete globals (keywords and vars).
	(xst_boot_replace_from_table): My own version of xst_replace_from_table.